kubernetes/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /$1 break;
      rewrite ^/services/subscription/(.*)$ /$1 break;
      rewrite ^/services/frontend/(.*)$ /$1 break;
      rewrite ^/services/api/(.*)$ /$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: web
              servicePort: 8080
          - path: /services/subscription/
            backend:
              serviceName: subscription
              servicePort: 3001
          - path: /services/frontend/
            backend:
              serviceName: frontend
              servicePort: 1233
          - path: /services/api/
            backend:
              serviceName: api
              servicePort: 3000
